<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="empty"> </string>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">LOGIN</string>
    <string name="CheckText">Check this out!</string>
    <string name="toast_message">Here is more information</string>
    <string name="snack_line">The switch is now </string>
    <string name="type_here">Type here</string>
    <string name="switch_on_off">Switch On/Off</string>
    <string name="switch_on">The switch is now on</string>
    <string name="switch_off">The switch is now off</string>
    <string name="flag">Canadian Flag</string>
    <string name="undo">Undo</string>
    <string name="emailPrompt">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="enter_password_text">Type your password:</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="type_name_here">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_above">Click the button above to take a picture.</string>
    <string name="goToChat">Go To Chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="receiveIcon">Harley Quinn</string>
    <string name="sendIcon">The Joker</string>
    <string name="do_delete">Do you want to delete this?</string>
    <string name="desc1">The selected row is: </string>
    <string name="desc2">The database id is: </string>
    <string name="goToWeather">Weather</string>
    <string name="currentWeather">Current Weather</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="UV_Rating">UV Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="messageHere">Message Here</string>
    <string name="IDis">ID=</string>
    <string name="isASend">Is a Send Message</string>
    <string name="isARecieve">Is a Receive Message</string>
    <string name="hide">HIDE</string>
    <string name="GoToToolbar">Go To Toolbar Page</string>
    <string name="search">Search</string>
    <string name="lab_eight">Lab Eight</string>
    <string name="fight">Chat Page</string>
    <string name="version">Version 1.0</string>
    <string name="the_future">Weather Forecast</string>
    <string name="backToLogin">Back To Login</string>
    <string name="ChrisHing">Chris Hing</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>