<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_name_here"
            android:inputType="textPersonName"
            android:autofillHints="@string/type_name_here"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/type_here"
            android:hint="@string/type_email_here"
            android:inputType="textEmailAddress"
            />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_picture"
        />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pictureButton"
            android:src="@android:drawable/picture_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_above"
            />
        <Button
            android:id="@+id/goToChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToChat" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>