<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:columnCount="2"
    android:rowCount="4"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_message"
        android:layout_column="0"
        android:layout_row="0"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/ButtonText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/CheckText" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_column="0"
        android:layout_row="2"
        android:contentDescription="@string/flag"
        />

    <Switch
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_on_off"
        android:layout_column="1"
        android:layout_row="2"
        android:checked="false"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:layout_columnSpan="2"
        android:inputType="textPersonName"
        android:autofillHints="@string/type_here" />
</GridLayout>