<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hello_message"
        android:id="@+id/text1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_toEndOf="@id/imgBut"
        android:text="@string/CheckText" />

    <ImageButton
        android:id="@+id/imgBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_below="@id/button"
        android:contentDescription="@string/flag"
        />

    <Switch
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_toEndOf="@id/imgBut"
        android:text="@string/switch_on_off"
        android:checked="false"
        />

    <EditText
        android:id="@+id/edText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:layout_below="@id/imgBut"
        android:autofillHints="@string/type_here" />
</RelativeLayout>