<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/currentWeather"
            />
        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_temperature"
            />
        <TextView
            android:id="@+id/min_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_temperature"
            />
        <TextView
            android:id="@+id/max_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_temperature"
            />
        <TextView
            android:id="@+id/UV_Rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UV_Rating"
            />
        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>