<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/messageHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageHere"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/IDis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/messageHere"
            android:text="@string/IDis"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/IDis"/>

        <TextView
            android:id="@+id/checkItDef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkIt"
            android:layout_alignBottom="@+id/checkIt"
            android:text="@string/isASend" />

        <Button
            android:id="@+id/Hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/hide"/>

    </RelativeLayout>
</FrameLayout>